--- a/docs/css/basic.css
+++ b/docs/css/basic.css
@@ -110,4 +110,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+html {
+    overflow: hidden;
+}
     
