--- a/docs/css/basic.css
+++ b/docs/css/basic.css
@@ -5,6 +5,7 @@ body {
     line-height: 1.75;
     color: var(--color-light-gray);
     background-color: var(--color-dark);
+    overflow-x: hidden;
 }
 .container {
 max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
@@ -110,7 +111,5 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
-html {
-    overflow: hidden;
-}
+
     
